# openmind

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  TRACTION.md  ecosystem.config.js  hackathon.md  pitch.md  prd.md  pyproject.toml  render.yaml  submission.md
agent/: __init__.py  __main__.py  agent.py  config.py  logging.py
agent/api/: __init__.py  analyze.py  seeds.py  server.py
agent/backtest/: harness.py  leakage_check.py  metrics.py
agent/data/: historical.py  manifold.py  polymarket_clob.py  polymarket_gamma.py
agent/execution/: live.py  paper.py  safety.py
agent/graphrag/: __init__.py  extract.py  graph.py  ontology.py  prompts.py
agent/monitor/: alerts.py  positions.py  report.py
agent/onchain/: __init__.py  arc.py  trace.py
agent/reasoning/: claude_client.py  prompts.py  search.py  temporal_guard.py
agent/store/: db.py  schema.sql
agent/strategy/: calibration.py  entry.py  exit.py  filters.py  sizing.py
data/seeds/: manifold_NuuPIIpNQ9.json  manifold_zqhtQnLEOA.json
deploy/: openmind-api.service
docs/superpowers/plans/: 2026-05-25-sqlite-to-mongodb.md
docs/superpowers/specs/: 2026-05-25-openmind-graphrag-prediction-agent-design.md  2026-05-25-sqlite-to-mongodb-design.md
tests/: conftest.py  test_calibration.py  test_db_roundtrips.py  test_filters.py  test_openmind.py  test_prompts.py  test_safety.py  test_sizing.py  test_temporal_guard.py
tools/: migrate_sqlite_to_mongo.py  seed_demo.py  traction_run.py
web/: README.md  package-lock.json  package.json  pnpm-lock.yaml
web/src/app/: page.tsx  (+2 more)
(+30 files in other folders)
